Añadir vista completa modulo lider

--- a/SCVP2/administrador/templates/modulo_administrador.html
+++ b/SCVP2/administrador/templates/modulo_administrador.html
@@ -26,13 +26,13 @@
                                             <div class="page-header-icon"><i data-feather="activity"></i></div>
                                             Vista general
                                         </h1>
-                                        <div class="page-header-subtitle"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </header>
-<div class="container-xl px-4 mt-4">
+    <div class="container-xl px-4 mt-n10">
+<div class="container">
     <div class="row" style="align-content: center">
         <div class="col-xl-4 mb-4" >
             <!-- Dashboard example card 3-->
@@ -42,7 +42,7 @@
                         <div class="me-3">
                             <i class="feather-xl text-green mb-3" data-feather="layout"></i>
                             <h5>Registro de empresa</h5>
-                            <div class="text-muted small">El administrador registrará la empresa en la que estará operando el sistema</div>
+                            <div class="text-muted small">Registrar a una empresa para la operación del sistema</div>
                         </div>
                         <img src="/static/assets/img/illustrations/windows.svg" alt="..." style="width: 8rem" />
                     </div>
@@ -58,7 +58,7 @@
                         <div class="me-3">
                             <i class="feather-xl text-secondary mb-3" data-feather="book"></i>
                             <h5>Registro de líderes de empresa</h5>
-                            <div class="text-muted small">El administrador del sistema creará las cuentas de los líderes de producción</div>
+                            <div class="text-muted small">Registrar cuentas de los líderes de producción</div>
                         </div>
                         <img src="/static/assets/img/illustrations/processing.svg" alt="..." style="width: 8rem" />
                     </div>
@@ -82,5 +82,6 @@
         </div>
     </div>
 </div>
+    </div>
     </html>
 {% endblock %}
