--- a/SCVP2/administrador/templates/registro/registro_de_empresa.html
+++ b/SCVP2/administrador/templates/registro/registro_de_empresa.html
@@ -107,7 +107,7 @@
                                     </form>
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                         <a class="btn btn-red"style="width: 140px;" href="{% url 'modulo_administrador' %}">Cancelar</a>
-                                        <a class="btn btn-primary" style="width: 140px;" href="{% url 'modulo_administrador' %}" >Guardar</a>
+                                        <a class="btn btn-primary" style="width: 140px;" href="{% url 'modulo_administrador' %}" >Registrar</a>
                                     </div>
                                 </div>
                             </div>
