--- a/SCVP2/operador/templates/estadisticos.html
+++ b/SCVP2/operador/templates/estadisticos.html
@@ -1,4 +1,4 @@
-{% extends 'panel_administrador.html' %}
+{% extends 'panel/panel_operador.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
