--- a/SCVP2/operador/templates/modulo_operador.html
+++ b/SCVP2/operador/templates/modulo_operador.html
@@ -1,4 +1,4 @@
-{% extends 'panel_operador.html' %}
+{% extends 'panel/panel_operador.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -31,12 +31,7 @@
                             </div>
                         </div>
                     </header>
-    <div class="container-xl px-4" style="margin-bottom: 25px; margin-top: 25px;">
-        <div class="card">
-               <div class="card-header" style="text-align: center;">Modulo de los operadores</div>
-            <!--div class="card-body">This compact page header example strips down the page header element to create a seamless, slim page header.</div-->
-        </div>
-    </div>
+        <div class="container-xl px-4 mt-n10">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-4 mb-4">
