--- a/SCVP2/staticGlobal/global.css
+++ b/SCVP2/staticGlobal/global.css
@@ -18274,7 +18274,7 @@ body {
   }
 }
 .dropdown-notifications .dropdown-menu .dropdown-notifications-header {
-  background-color: #0061f2;
+  background-color: #78102E;
   color: #fff !important;
   padding-top: 1rem;
   padding-bottom: 1rem;
