--- a/SCVP2/administrador/templates/registro/registro_de_administrador.html
+++ b/SCVP2/administrador/templates/registro/registro_de_administrador.html
@@ -26,7 +26,7 @@
 
                                 <!-- Basic login form-->
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro de Administrador</h3></div>
+                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro de Nuevo Administrador</h3></div>
                                     <div class="card-body">
                                        <!-- Django Form -->
                                 <form action="{% url 'registro_de_administrador' %}" method="post">
