--- a/SCVP2/administrador/templates/registro/registro_de_usuario.html
+++ b/SCVP2/administrador/templates/registro/registro_de_usuario.html
@@ -26,7 +26,7 @@
 
                                 <!-- Basic login form-->
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro de Usuario</h3></div>
+                                    <div class="card-header justify-content-center"><h3 class="fw-light my-4">Registro de Líder de empresa</h3></div>
                                     <div class="card-body">
                                         <!-- Django Form -->
                                         <form action="{% url 'registro_de_usuario' %}" method="post">
@@ -41,7 +41,7 @@
                                             <!-- Form Group (email) -->
                                             <div class="mb-3">
                                                 <label class="small mb-1" for="email">Correo electrónico:</label>
-                                                <input class="form-control" type="email" id="email" name="email" required>
+                                                <input class="form-control" type="email" id="email" name="email" required placeholder="Introduce el correo electronico">
                                             </div>
 
                                             <!-- Form Group (numero_empleado) -->
@@ -62,10 +62,11 @@
 
                                                         <!-- Form Group (password_repeat) -->
                                                         <div class="mb-3">
-                                                            <label class="small mb-1" for="password_repeat">Repetir Contraseña:</label>
+                                                            <label class="small mb-1" for="password_repeat">Confirma la Contraseña:</label>
                                                             <div class="input-group">
                                                                 <input class="form-control" type="password" id="password_repeat" name="password_repeat" required>
                                                                 <div class="input-group-append">
+
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -109,17 +110,44 @@
         var togglePasswordButton = document.getElementById('togglePassword');
         var togglePasswordRepeatButton = document.getElementById('togglePasswordRepeat');
 
+        var passwordInputType = 'password';
+        var passwordRepeatInputType = 'password';
+
         togglePasswordButton.addEventListener('click', function () {
-            togglePasswordVisibility(passwordInput);
+            passwordInputType = togglePasswordVisibility(passwordInput, passwordInputType);
         });
 
         togglePasswordRepeatButton.addEventListener('click', function () {
-            togglePasswordVisibility(passwordRepeatInput);
+            passwordRepeatInputType = togglePasswordVisibility(passwordRepeatInput, passwordRepeatInputType);
         });
 
-        function togglePasswordVisibility(inputElement) {
-            var type = inputElement.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordInput.addEventListener('focus', function () {
+            passwordInput.setAttribute('type', passwordInputType);
+        });
+
+        passwordRepeatInput.addEventListener('focus', function () {
+            passwordRepeatInput.setAttribute('type', passwordRepeatInputType);
+        });
+
+        passwordInput.addEventListener('input', function () {
+            updateVisibilityToggle(passwordInput, passwordInputType);
+        });
+
+        passwordRepeatInput.addEventListener('input', function () {
+            updateVisibilityToggle(passwordRepeatInput, passwordRepeatInputType);
+        });
+
+        function togglePasswordVisibility(inputElement, currentType) {
+            var type = currentType === 'password' ? 'text' : 'password';
             inputElement.setAttribute('type', type);
+            return type;
+        }
+
+        function updateVisibilityToggle(inputElement, currentType) {
+            var type = inputElement.getAttribute('type');
+            if (type !== currentType) {
+                togglePasswordVisibility(inputElement, currentType);
+            }
         }
     });
 </script>
