--- a/SCVP2/lider/templates/modulo_lider.html
+++ b/SCVP2/lider/templates/modulo_lider.html
@@ -1,4 +1,4 @@
-{% extends 'base2.html' %}
+{% extends 'panel/panel_lider.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -16,24 +16,33 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     </head>
 {% block content %}
-
-<div class="container-xl px-4" style="margin-bottom: 25px; margin-top: 25px;">
-    <div class="card">
-        <div class="card-header" style="text-align: center;">Modulo de Lideres de producción</div>
-    </div>
-</div>
-
+<header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
+                        <div class="container-xl px-4">
+                            <div class="page-header-content pt-4">
+                                <div class="row align-items-center justify-content-between">
+                                    <div class="col-auto mt-4">
+                                        <h1 class="page-header-title">
+                                            <div class="page-header-icon"><i data-feather="activity"></i></div>
+                                            Vista general
+                                        </h1>
+                                        <div class="page-header-subtitle"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </header>
+  <div class="container-xl px-4 mt-n10">
 <div class="container-xl px-4">
     <div class="row justify-content-center">
         <div class="col-xl-4 mb-4">
             <!-- Dashboard example card 2-->
-            <a class="card lift h-100" href="{% url 'registro_de_usuario' %}">
+            <a class="card lift h-100" href="{% url 'registro_de_lideres_y_operadores' %}">
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
                             <i class="feather-xl text-secondary mb-3" data-feather="book"></i>
                             <h5>Registro de + lideres u operadores</h5>
-                            <div class="text-muted small">El lider puede añadir a más lideres u operadores</div>
+                            <div class="text-muted small">Añadir a más lideres u operadores</div>
                         </div>
                         <img src="/static/assets/img/illustrations/processing.svg" alt="..." style="width: 8rem" />
                     </div>
@@ -41,17 +50,19 @@
             </a>
         </div>
 
+
+
         <div class="col-xl-4 mb-4">
             <!-- Dashboard example card 3-->
-            <a class="card lift h-100" href="#!">
+            <a class="card lift h-100" href={% url 'crear_grupo' %}>
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
                             <i class="feather-xl text-green mb-3" data-feather="layout"></i>
-                            <h5>Crear usuarios</h5>
-                            <div class="text-muted small">Agregar a los usuarios que podrán ingresar al sistema, ya sea más lideres u operadores</div>
+                            <h5>Crear grupo</h5>
+                            <div class="text-muted small">Agregar los grupos de cada proceso, línea o área</div>
                         </div>
-                        <img src="/static/assets/img/illustrations/windows.svg" alt="..." style="width: 8rem" />
+                        <img src={% static "assets/img/illustrations/windows.svg"%} alt="..." style="width: 8rem" />
                     </div>
                 </div>
             </a>
@@ -59,23 +70,7 @@
 
         <div class="col-xl-4 mb-4">
             <!-- Dashboard example card 3-->
-            <a class="card lift h-100" href="#!">
-                <div class="card-body d-flex justify-content-center flex-column">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div class="me-3">
-                            <i class="feather-xl text-green mb-3" data-feather="layout"></i>
-                            <h5>Crear grupo y añadir integrantes de grupo</h5>
-                            <div class="text-muted small">El lider puede crear grupos para cada proceso</div>
-                        </div>
-                        <img src="/static/assets/img/illustrations/windows.svg" alt="..." style="width: 8rem" />
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-xl-4 mb-4">
-            <!-- Dashboard example card 3-->
-            <a class="card lift h-100" href="#!">
+            <a class="card lift h-100" href={%  url 'procesos' %}>
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
@@ -120,7 +115,37 @@
                 </div>
             </a>
         </div>
+
+            <div class="col-xl-4 mb-4">
+                <a class="card lift h-100" href="#">
+                    <div class="card-body d-flex justify-content-center flex-column">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div class="me-3">
+                                <i class="feather-xl text-secondary mb-3" data-feather="book"></i>
+                                <h5>Equipos</h5>
+                                <div class="text-muted small">Asignación estándares de equipo</div>
+                            </div>
+                            <img src="/static/assets/img/illustrations/processing.svg" alt="..." style="width: 8rem" />
+                        </div>
+                    </div>
+                </a>
+            </div>
+          <div class="col-xl-4 mb-4">
+            <!-- Dashboard example card 2-->
+            <a class="card lift h-100" href="#">
+                <div class="card-body d-flex justify-content-center flex-column">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="me-3">
+                            <i class="feather-xl text-secondary mb-3" data-feather="book"></i>
+                            <h5>Estadisticos</h5>
+                            <div class="text-muted small">Visualizar estadisticos</div>
+                        </div>
+                        <img src="/static/assets/img/illustrations/processing.svg" alt="..." style="width: 8rem" />
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
-
+  </div>
 {% endblock %}
