Añadir funcionRangoLimiteControl.js, modificar styles.css al final del archivo, terminar modulo_lider.html, terminar monitoreo.html

--- a/SCVP2/lider/templates/modulo_lider.html
+++ b/SCVP2/lider/templates/modulo_lider.html
@@ -86,7 +86,7 @@
 
         <div class="col-xl-4 mb-4">
             <!-- Dashboard example card 3-->
-            <a class="card lift h-100" href="#!">
+            <a class="card lift h-100" href={%  url "producto"%}>
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
@@ -102,7 +102,7 @@
 
         <div class="col-xl-4 mb-4 align-content-center">
             <!-- Dashboard example card 3-->
-            <a class="card lift h-100" href="#!">
+            <a class="card lift h-100" href={%  url "monitoreo"%}>
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
