--- a/SCVP2/lider/templates/panel/panel_lider.html
+++ b/SCVP2/lider/templates/panel/panel_lider.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Inicio de Aministrador</title>
+        <title>Panel de lider</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link   rel="stylesheet" href={% static 'global.css' %}>
         <link rel="icon" type="image/x-icon" href={% static 'assets/img/favicon.png' %} />
