--- a/SCVP2/lider/templates/proceso/procesos.html
+++ b/SCVP2/lider/templates/proceso/procesos.html
@@ -22,26 +22,22 @@
         <div class="row " style="width: 50%; margin: auto;">
         <!-- Account details card-->
                                 <div class="card mb-3">
-                                    <div class="card-header">Account Details</div>
+                                    <div class="card-header">Agregar proceso</div>
                                     <div class="card-body">
                                         <form>
                                             <!-- Form Row-->
                                             <div class="row gx-3 mb-3">
-                                                <!-- Form Group (first name)-->
-                                                <div class="col-md-3">
-                                                    <label class="small mb-1" for="inputFirstName">First name</label>
-                                                    <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" value="" />
+                                                <!-- Form Group (Nombre del proceso)-->
+                                                <div class="mb-3">
+                                                    <label class="small mb-1" for="inputNombreProceso">Nombre del proceso</label>
+                                                    <input class="form-control" id="inputNombreProceso" type="text" placeholder="Ingresa el nombre el proceso" value="" />
                                                 </div>
                                                 <!-- Form Group (last name)-->
-                                                <div class="col-md-3">
-                                                    <label class="small mb-1" for="inputLastName">Last name</label>
-                                                    <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" value="" />
-                                                </div>
                                             </div>
-                                            <!-- Form Group (email address)-->
+                                            <!-- Form Group (Buscar empleado)-->
                                             <div class="mb-3">
-                                                <label class="small mb-1" for="inputEmailAddress">Email address</label>
-                                                <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter your email address" value="" />
+                                                <label class="small mb-1" for="inputBuscarEmpleado">Buscar numero de empleado para asignar proceso</label>
+                                                <input class="form-control" id="inputBuscarEmpleado" type="search" placeholder="Buscar empleado" value="" />
                                             </div>
                                             <!-- Form Group (Group Selection Checkboxes)-->
                                             <div class="mb-3">
@@ -79,10 +75,10 @@
                                                 </select>
                                             </div>
                                             <!-- Submit button-->
-                                            <div class="justify-content-between">
-                                                   <a class="btn btn-red" href={% url "modulo_lider"%} type="button">Cancelar</a>
-                                             <button class="btn btn-primary" type="button">Agregar proceso</button>
-                                                        </div>
+                                            <div class="d-flex justify-content-between">
+                                                <a class="btn btn-red" href={% url "modulo_lider"%} type="button">Cancelar</a>
+                                                <button class="btn btn-primary" type="submit">Agregar proceso</button>
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
