--- a/SCVP2/ingreso/templates/modulo_lider.html
+++ b/SCVP2/ingreso/templates/modulo_lider.html
@@ -27,7 +27,7 @@
     <div class="row justify-content-center">
         <div class="col-xl-4 mb-4">
             <!-- Dashboard example card 2-->
-            <a class="card lift h-100" href="{% url 'registro_de_usuario' %}">
+            <a class="card lift h-100" href="{% url 'base' %}">
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
