--- a/SCVP2/ingreso/templates/inicio_ingreso.html
+++ b/SCVP2/ingreso/templates/inicio_ingreso.html
@@ -24,20 +24,20 @@
                 <div class="center-wrap">
                   <div class="section text-center">
                     <h4 class="mb-4 pb-3">Ingreso</h4>
-                    <form method="post" action="{% url 'ingreso' %}">
+                    <form action="{% url 'ingreso' %}" method='POST'>
                       {% csrf_token %}
-                      {{ error }}
-                    <div class="form-group">
-                      <input type="text" class="form-style" name="username" placeholder="Nombre de usuario">
-                      <i class="input-icon uil uil-asterisk"></i>
-                    </div>	
-                    <div class="form-group mt-2">
-                      <input type="password" class="form-style" name="password" placeholder="Contraseña">
-                      <i class="input-icon uil uil-lock-alt"></i>
-                    </div>
-                    <button type="submit" class="btn mt-4">Ingresar</button>
-                    </form>
-                    <p class="mb-0 mt-4 text-center"><a href="#" class="link">¿Olvidaste tu contraseña?</a></p>
+                      <div class="form-group">
+                        <input type="text" class="form-style" name="username" placeholder="Numero de Empleado">
+                        <i class="input-icon uil uil-asterisk"></i>
+                      </div>	
+                      <div class="form-group mt-2">
+                        <input type="password" class="form-style" name="password" placeholder="Contraseña">
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                     <p class="mb-0 mt-2 text-center"></p> {{ error }} </p>
+                      <button type="submit" class="btn mt-2">Entrar adentro</button>
+                  </form>
+                    <p class="mb-0 mt-2 text-center"><a href="#" class="link">¿Olvidaste tu contraseña?</a></p>
                       </div>
                     </div>
                   </div>
@@ -56,7 +56,7 @@
                             <input type="password" class="form-style" name="password" placeholder="Contraseña">
                             <i class="input-icon uil uil-lock-alt"></i>
                           </div>
-                    <button type="submit" class="btn mt-4">Ingresar</button>
+                    <button type="submit" class="btn mt-4">afuera</button>
                     </form>
                     <p class="mb-0 mt-4 text-center"><a href="" class="link">¿Olvidaste tu contraseña?</a></p>
                       </div>
