--- a/SCVP2/administrador/templates/modulo_administrador.html
+++ b/SCVP2/administrador/templates/modulo_administrador.html
@@ -1,4 +1,4 @@
-{% extends 'panel_administrador.html' %}
+{% extends 'panel/panel_administrador.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,14 +10,14 @@
         <meta name="author" content="" />
         <title>Inicio de Aministrador</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-        <link   rel="stylesheet" href={% static 'global.css' %}>
+        <link   rel="stylesheet" href={% static 'css/global.css' %}>
         <link rel="icon" type="image/x-icon" href="static/assets/img/favicon.png" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     </head>
 
 {% block content %}
-      <header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
+      <!--header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
                         <div class="container-xl px-4">
                             <div class="page-header-content pt-4">
                                 <div class="row align-items-center justify-content-between">
@@ -30,8 +30,8 @@
                                 </div>
                             </div>
                         </div>
-                    </header>
-    <div class="container-xl px-4 mt-n10">
+                    </header-->
+    <div class="container-xl px-4 mt-10">
 <div class="container">
     <div class="row" style="align-content: center">
         <div class="col-xl-4 mb-4" >
