--- a/SCVP2/administrador/templates/registro/registro_de_administrador.html
+++ b/SCVP2/administrador/templates/registro/registro_de_administrador.html
@@ -1,4 +1,4 @@
-{% extends "panel_administrador.html" %}
+{% extends "panel/panel_administrador.html" %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,7 +9,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Registro de Administrador</title>
-        <link rel="stylesheet" href="{% static 'global.css' %}">
+        <link rel="stylesheet" href="{% static 'css/global.css' %}">
     </head>
 
 
