--- a/SCVP2/ingreso/templates/ingreso_administrador.html
+++ b/SCVP2/ingreso/templates/ingreso_administrador.html
@@ -9,7 +9,7 @@
         <meta name="author" content="" />
         <title>Inicio de Sesion de Aministrador</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-        <link   rel="stylesheet" href= {% static "global.css"%}>
+        <link   rel="stylesheet" href= {% static "css/global.css" %}>
         <link rel="icon" type="image/x-icon" href="/static/assets/img/favicon.png" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
