--- a/SCVP2/ingreso/templates/ingreso_usuario.html
+++ b/SCVP2/ingreso/templates/ingreso_usuario.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href={% static 'styles.css'%}>
+<link rel="stylesheet" href={% static 'css/styles.css' %}>
 </head>
 <body>
 <div class="section">
@@ -24,7 +24,7 @@
                 <div class="center-wrap">
                   <div class="section text-center">
                     <h4 class="mb-4 pb-3">Ingreso</h4>
-                    <form method="post" action="{% url 'modulo_operador' %}">
+                    <form method="post" action="{% url 'operador' %}">
                       {% csrf_token %}
                       {{ error }}
                     <div class="form-group">
