--- a/SCVP2/lider/templates/modulo_lider.html
+++ b/SCVP2/lider/templates/modulo_lider.html
@@ -10,13 +10,13 @@
         <meta name="author" content="" />
         <title>Inicio de Aministrador</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-        <link   rel="stylesheet" href={% static 'global.css' %}>
+        <link   rel="stylesheet" href={% static '' %}>
         <link rel="icon" type="image/x-icon" href="static/assets/img/favicon.png" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
     </head>
 {% block content %}
-<header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
+<!--header class="page-header page-header-dark bg-gradient-primary-to-secondary pb-10">
                         <div class="container-xl px-4">
                             <div class="page-header-content pt-4">
                                 <div class="row align-items-center justify-content-between">
@@ -30,11 +30,10 @@
                                 </div>
                             </div>
                         </div>
-                    </header>
-  <div class="container-xl px-4 mt-n10">
-<div class="container-xl px-4">
+                    </header-->
+  <div class="container-xl px-4 mt-10">
     <div class="row justify-content-center">
-        <div class="col-xl-4 mb-4">
+        <div class="col-xl-4 mb-4 align-content-center">
             <!-- Dashboard example card 2-->
             <a class="card lift h-100" href="{% url 'registro_de_lideres_y_operadores' %}">
                 <div class="card-body d-flex justify-content-center flex-column">
@@ -52,7 +51,7 @@
 
 
 
-        <div class="col-xl-4 mb-4">
+        <div class="col-xl-4 mb-4 align-content-center">
             <!-- Dashboard example card 3-->
             <a class="card lift h-100" href={% url 'crear_grupo' %}>
                 <div class="card-body d-flex justify-content-center flex-column">
@@ -68,7 +67,7 @@
             </a>
         </div>
 
-        <div class="col-xl-4 mb-4">
+        <div class="col-xl-4 mb-4 align-content-center">
             <!-- Dashboard example card 3-->
             <a class="card lift h-100" href={%  url 'procesos' %}>
                 <div class="card-body d-flex justify-content-center flex-column">
@@ -84,7 +83,7 @@
             </a>
         </div>
 
-        <div class="col-xl-4 mb-4">
+        <div class="col-xl-4 mb-4 align-content-center">
             <!-- Dashboard example card 3-->
             <a class="card lift h-100" href={%  url "producto"%}>
                 <div class="card-body d-flex justify-content-center flex-column">
@@ -116,7 +115,7 @@
             </a>
         </div>
 
-            <div class="col-xl-4 mb-4">
+            <div class="col-xl-4 mb-4 align-content-center">
                 <a class="card lift h-100" href="#">
                     <div class="card-body d-flex justify-content-center flex-column">
                         <div class="d-flex align-items-center justify-content-between">
@@ -130,9 +129,9 @@
                     </div>
                 </a>
             </div>
-          <div class="col-xl-4 mb-4">
+          <div class="col-xl-4 mb-4 align-content-center">
             <!-- Dashboard example card 2-->
-            <a class="card lift h-100" href="#">
+            <a class="card lift h-100" href={% url "estadistico"%}>
                 <div class="card-body d-flex justify-content-center flex-column">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="me-3">
