--- a/SCVP2/lider/templates/proceso/procesos.html
+++ b/SCVP2/lider/templates/proceso/procesos.html
@@ -10,7 +10,7 @@
         <meta name="author" content="" />
         <title>Procesos</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-        <link   rel="stylesheet" href={% static 'global.css' %}>
+        <link   rel="stylesheet" href={% static 'css/global.css' %}>
         <link rel="icon" type="image/x-icon" href="static/assets/img/favicon.png" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
