--- a/SCVP2/lider/templates/producto/producto.html
+++ b/SCVP2/lider/templates/producto/producto.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container w-75 mt-5 mb-10">
  <div class="card card-primary">
-              <div class="card-header">
+              <div class="card-header text-center">
                 <h3 class="card-title">Crear Producto</h3>
               </div>
               <!-- /.card-header -->
