--- a/SCVP2/operador/templates/panel/panel_operador.html
+++ b/SCVP2/operador/templates/panel/panel_operador.html
@@ -9,7 +9,7 @@
         <meta name="author" content="" />
         <title>Inicio de Aministrador</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-        <link   rel="stylesheet" href={% static 'global.css' %} >
+        <link   rel="stylesheet" href={% static 'css/global.css' %} >
         <link rel="icon" type="image/x-icon" href={% static "assets/img/favicon.png" %} />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
@@ -247,20 +247,15 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-<<<<<<< HEAD:SCVP2/usuarios/templates/base3.html
-            
-=======
-                <main>
-
->>>>>>> 03a728ceb8c60b78927b74e6fa149964371b3092:SCVP2/operador/templates/panel/panel_operador.html
         {% block content %}{% endblock %}
     </div>
-        </div>
-             <!--Para el funcionamiento de este base.html eliminar estos 2 scripts de abajo en donde se llame a este html o simplemente no usarlos-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src={% static "js/scripts.js" %}></script>
+          </div>
+
 
     </body>
         <footer>
         </footer>
+             <!--Para el funcionamiento de este base.html eliminar estos 2 scripts de abajo en donde se llame a este html o simplemente no usarlos-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src={% static "js/scripts.js" %}></script>
 </html>
