--- a/SCVP2/staticGlobal/css/global.css
+++ b/SCVP2/staticGlobal/css/global.css
@@ -19632,3 +19632,200 @@ pre[class*=language-] {
   display: inline-block;
   padding: 3px;
 }
+
+.btn-datatable {
+  height: 20px !important;
+  width: 20px !important;
+  font-size: 0.75rem;
+  border-radius: 0.35rem !important;
+}
+
+.btn-transparent-dark {
+  --bs-btn-color: rgba(33, 40, 50, 0.5);
+  --bs-btn-bg: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: rgba(33, 40, 50, 0.5);
+  --bs-btn-hover-bg: rgba(33, 40, 50, 0.1);
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-focus-shadow-rgb: 11, 14, 17;
+  --bs-btn-active-color: rgba(33, 40, 50, 0.5);
+  --bs-btn-active-bg: rgba(33, 40, 50, 0.2);
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgba(33, 40, 50, 0.35);
+  --bs-btn-disabled-bg: rgba(33, 40, 50, 0.1);
+  --bs-btn-disabled-border-color: transparent;
+  color: rgba(33, 40, 50, 0.5) !important;
+}
+.me-2 {
+  margin-right: 0.5rem !important;
+}
+
+
+/* PAGER */
+.datatable-pagination a:hover {
+  background-color: #e0e5ec;
+}
+
+.datatable-pagination .datatable-active a,
+.datatable-pagination .datatable-active a:focus,
+.datatable-pagination .datatable-active a:hover {
+  color: #fff;
+  background-color: #0061f2;
+}
+
+.datatable-pagination li.datatable-hidden {
+  visibility: visible;
+}
+
+.datatable-pagination .ellipsis a,
+.datatable-pagination .disabled a,
+.datatable-pagination .disabled a:focus,
+.datatable-pagination .disabled a:hover {
+  cursor: not-allowed;
+}
+
+.datatable-pagination .disabled a,
+.datatable-pagination .disabled a:focus,
+.datatable-pagination .disabled a:hover {
+  cursor: not-allowed;
+  opacity: 0.4;
+}
+
+.datatable-pagination .pager a {
+  font-weight: bold;
+}
+
+/* TABLE */
+.datatable-table {
+  border-collapse: collapse;
+}
+
+.datatable-table > tbody > tr > td,
+.datatable-table > tbody > tr > th,
+.datatable-table > tfoot > tr > td,
+.datatable-table > tfoot > tr > th,
+.datatable-table > thead > tr > td,
+.datatable-table > thead > tr > th {
+  vertical-align: middle;
+  padding: 0.75rem 0.75rem;
+}
+
+.datatable-table > thead > tr > th {
+  vertical-align: bottom;
+  text-align: left;
+  border-bottom: none;
+}
+
+.datatable-table > tfoot > tr > th {
+  vertical-align: bottom;
+  text-align: left;
+}
+
+.datatable-table th {
+  vertical-align: bottom;
+  text-align: left;
+}
+
+.datatable-table th a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.datatable-sorter {
+  display: inline-block;
+  height: 100%;
+  position: relative;
+  width: 100%;
+  padding-right: 1rem;
+}
+
+.datatable-sorter::before,
+.datatable-sorter::after {
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  right: 4px;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  opacity: 0.2;
+}
+
+.datatable-sorter::before {
+  bottom: 4px;
+}
+
+.datatable-sorter::after {
+  top: 0px;
+}
+
+.asc .datatable-sorter::after,
+.desc .datatable-sorter::before {
+  opacity: 0.6;
+}
+
+.datatables-empty {
+  text-align: center;
+}
+
+.datatable-top::after,
+.datatable-bottom::after {
+  clear: both;
+  content: " ";
+  display: table;
+}
+
+.btn-datatable {
+  height: 20px !important;
+  width: 20px !important;
+  font-size: 0.75rem;
+  border-radius: 0.35rem !important;
+}
+
+.sbp-dropdown-example .dropdown-menu {
+  display: inline-block;
+  position: relative;
+  float: none;
+  max-width: 15rem;
+}
+
+.sbp-preview {
+  border-radius: 0.35rem;
+  border: 0.25rem solid #e0e5ec;
+  border-style: solid;
+}
+.sbp-preview .sbp-preview-content {
+  padding: 1.5rem;
+  border-bottom: 1px solid #e0e5ec;
+  position: relative;
+}
+.sbp-preview .sbp-preview-code {
+  background-color: #f2f6fc;
+  padding: 1.5rem;
+  border-bottom: 1px solid #e0e5ec;
+}
+.sbp-preview .sbp-preview-code .nav-tabs {
+  border-bottom-color: transparent;
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+.sbp-preview .sbp-preview-code .nav-tabs .nav-item .nav-link {
+  border-bottom: 0;
+  display: inline-flex;
+  align-items: center;
+}
+.sbp-preview .sbp-preview-code .nav-tabs .nav-item .nav-link.active {
+  border-color: transparent;
+  background-color: #2f2f2f;
+  color: white;
+}
+.sbp-preview .sbp-preview-code .nav-tabs .nav-item .nav-link .img-pug {
+  height: 1em;
+  padding: 1px 0;
+}
+.sbp-preview .sbp-preview-text {
+  background-color: #f2f6fc;
+  font-size: 0.875rem;
+  padding: 1.5rem;
+}
