implementacion del login

--- a/SCVP2/ingreso/templates/ingreso_administrador.html
+++ b/SCVP2/ingreso/templates/ingreso_administrador.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="card-body">
                                 <!-- Inicio de sesion formulario-->
-                                <form method="post" action="{% url 'admin:inicio_admin' %}">
+                                <form method="post" action="{% url 'administrador:inicio_administrador' %}">
                                     {% csrf_token %}
                                     {{ error }}
                                     <div class="mb-3">
