--- a/SCVP2/administrador/templates/modulo_administrador.html
+++ b/SCVP2/administrador/templates/modulo_administrador.html
@@ -10,12 +10,12 @@
     <meta name="author" content=""/>
     <title>Inicio de Aministrador</title>
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href={% static 'css/global.css' %}>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="icon" type="image/x-icon" href="static/assets/img/favicon.png"/>
     <script data-search-pseudo-elements defer
             src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
             crossorigin="anonymous"></script>
-    <script src={% static "libs/feather-icons/feather.min.js" %}
+    <script src="{% static 'libs/feather-icons/feather.min.js' %}"
                     crossorigin="anonymous"></script>
 </head>
 
@@ -25,7 +25,7 @@
             <div class="row" style="align-content: center">
                 <div class="col-xl-4 mb-4">
                     <!-- Dashboard example card 3-->
-                    <a class="card lift h-100" href="{% url 'admin:registro_empresa' %}">
+                    <a class="card lift h-100" href="{% url 'administrador:registro_empresa' %}">
                         <div class="card-body d-flex justify-content-center flex-column">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="me-3">
@@ -43,7 +43,7 @@
 
                 <div class="col-xl-4 mb-4">
                     <!-- Dashboard example card 2-->
-                    <a class="card lift h-100" href="{% url 'admin:registro_lider' %}">
+                    <a class="card lift h-100" href="{% url 'administrador:registro_lider' %}">
                         <div class="card-body d-flex justify-content-center flex-column">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="me-3">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-xl-4 mb-4">
                     <!-- Dashboard example card 2-->
-                    <a class="card lift h-100" href="{% url 'admin:registro_de_admin' %}">
+                    <a class="card lift h-100" href="{% url 'administrador:registro_de_administrador'%}">
                         <div class="card-body d-flex justify-content-center flex-column">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="me-3">
