--- a/SCVP2/administrador/templates/registro/registro_de_administrador.html
+++ b/SCVP2/administrador/templates/registro/registro_de_administrador.html
@@ -26,7 +26,7 @@
                                     <div class="card-header d-flex justify-content-center"><h3 class="fw-light my-4">Registro de Nuevo Administrador</h3></div>
                                     <div class="card-body">
                                        <!-- Django Form -->
-                                <form action="{% url 'admin:registro_de_admin' %}" method="post">
+                                <form action="{% url 'administrador:registro_de_administrador' %}" method="post">
                                     {% csrf_token %}
 
                                     <!-- Form Group (numero_empleado) -->
@@ -56,7 +56,7 @@
                                     </div>
 
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <a class="btn btn-outline-danger" href="{% url 'admin:inicio_admin' %}">Cancelar</a>
+                                        <a class="btn btn-outline-danger" href="{% url 'administrador:inicio_administrador' %}">Cancelar</a>
                                         <input class="btn btn-outline-primary" type="submit" value="Registrar">
                                     </div>
                                 </form>
