--- a/SCVP2/administrador/templates/registro/registro_de_lideres.html
+++ b/SCVP2/administrador/templates/registro/registro_de_lideres.html
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="card-body">
                                     <!-- Django Form -->
-                                    <form action="{% url 'admin:registro_lider' %}" method="post">
+                                    <form action="{% url 'administrador:registro_lider' %}" method="post">
                                         {% csrf_token %}
 
                                         <!-- Form Group (nombre) -->
@@ -80,7 +80,7 @@
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="btn btn-outline-danger "
-                                               href="{% url 'admin:inicio_admin' %}">Cancelar</a>
+                                               href="{% url 'administrador:inicio_administrador' %}">Cancelar</a>
                                             <input class="btn btn-outline-primary" type="submit" value="Registrar">
                                         </div>
                                     </form>
