--- a/SCVP2/administrador/templates/inicio/empresa/registro/registro_de_lider.html
+++ b/SCVP2/administrador/templates/inicio/empresa/registro/registro_de_lider.html
@@ -26,11 +26,15 @@
                             <!-- Basic login form-->
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header d-flex justify-content-center">
-                                    <h3 class="fw-light my-4">Registro de Líder de empresa</h3>
+                                    <h3 class="fw-light my-4">
+                                        <i class="fas fa-user-plus"></i>
+                                        <!-- Este es el icono de agregar usuario de Font Awesome -->
+                                        Registro de Líder de empresa
+                                    </h3>
                                 </div>
                                 <div class="card-body">
                                     <!-- Django Form -->
-                                    <form action="{% url 'admin:registro_lider' %}" method="post">
+                                    <form action="{% url 'administrador:registro_lider' %}" method="post">
                                         {% csrf_token %}
 
                                         <!-- Form Group (nombre) -->
@@ -80,7 +84,7 @@
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="btn btn-outline-danger "
-                                               href="{% url 'admin:inicio_admin' %}">Cancelar</a>
+                                               href="{% url 'administrador:inicio_administrador' %}">Cancelar</a>
                                             <input class="btn btn-outline-primary" type="submit" value="Registrar">
                                         </div>
                                     </form>
