--- a/SCVP2/administrador/templates/panel/panel_administrador.html
+++ b/SCVP2/administrador/templates/panel/panel_administrador.html
@@ -8,13 +8,11 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title></title>
-    <link rel="stylesheet" href="{% static "css/style.min.css" %}"/>
-    <link rel="stylesheet" href= {% static 'css/global.css' %}>
-    <link rel="icon" type="image/x-icon" href={% static "assets/img/favicon.png" %}/>
-    <script data-search-pseudo-elements defer
-            src="{% static  "libs/font-awesome/js/all.min.js" %}"
-            crossorigin="anonymous"></script>
-    <script src="{% static "libs/feather-icons/feather.min.js" %} " crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="{% static 'css/style.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.png' %}"/>
+    <script data-search-pseudo-elements defer src="{% static  'libs/font-awesome/js/all.min.js' %}" crossorigin="anonymous"></script>
+    <script src="{% static 'libs/feather-icons/feather.min.js' %} " crossorigin="anonymous"></script>
 </head>
 <body class="nav-fixed">
 <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white"
@@ -119,7 +117,7 @@
                 <!-- Example Message 1  -->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-2.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-2.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -134,7 +132,7 @@
                 <!-- Example Message 2-->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-3.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-3.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -149,7 +147,7 @@
                 <!-- Example Message 3-->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-4.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-4.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -164,7 +162,7 @@
                 <!-- Example Message 4-->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-5.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-5.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -185,11 +183,12 @@
             <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage"
                href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                aria-expanded="false"><img class="img-fluid"
-                                          src={% static "assets/img/illustrations/profiles/profile-1.png" %}/></a>
+                                          src="{% static 'assets/img/illustrations/profiles/profile-1.png' %}"/></a>
             <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up"
                  aria-labelledby="navbarDropdownUserImage">
                 <h6 class="dropdown-header d-flex align-items-center">
-                    <img class="dropdown-user-img" src={% static "assets/img/illustrations/profiles/profile-1.png" %}/>
+                    <img class="dropdown-user-img"
+                         src="{% static 'assets/img/illustrations/profiles/profile-1.png' %}"/>
                     <div class="dropdown-user-details">
                         <div class="dropdown-user-details-name">Administrador</div>
                         <div class="dropdown-user-details-email">admin@admin.com</div>
@@ -246,7 +245,9 @@
                     </a>
                     <div class="collapse" id="empresa" data-bs-parent="#empresa">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'admin:registro_empresa' %}">Registar empresa</a>
+                            <a class="nav-link" href="{% url 'administrador:registro_empresa' %}">Registar empresa</a>
+                            <a class="nav-link" href="">Listado de empresas</a>
+                            <a class="nav-link" href="">Modificar empresas</a>
                         </nav>
                     </div>
                     {#                                <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>#}
@@ -271,7 +272,8 @@
                     </a>
                     <div class="collapse" id="collapseComponents" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'admin:registro_lider' %}">Registar lideres de empresa</a>
+                            <a class="nav-link" href="{% url 'administrador:registro_lider' %}">Registar lideres de
+                                empresa</a>
                         </nav>
                     </div>
 
@@ -284,7 +286,8 @@
                     </a>
                     <div class="collapse" id="collapseEspecificacionProductos" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'admin:registro_de_admin' %}">Registrar administradores</a>
+                            <a class="nav-link" href="{% url 'administrador:registro_admin' %}">Registrar
+                                administradores</a>
                         </nav>
                     </div>
                 </div>
@@ -304,13 +307,9 @@
         {% block content %}{% endblock %}
     </div>
 </div>
-
-</body>
 <footer>
 </footer>
-<!--Para el funcionamiento de este base.html eliminar estos 2 scripts de abajo en donde se llame a este html o simplemente no usarlos-->
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"
-        crossorigin="anonymous"></script>
-<script src={% static "js/scripts.js" %}></script>
-
+<script src="{% static 'js/bootstrap.bundle.min.js' %}" crossorigin="anonymous"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
+</body>
 </html>
