--- a/SCVP2/lider/templates/panel/panel_lider.html
+++ b/SCVP2/lider/templates/panel/panel_lider.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <link href="{% static 'css/style.min.css' %}" rel="stylesheet"/>
-    <link rel="stylesheet" href={% static 'css/global.css' %}>
-    <link rel="icon" type="image/x-icon" href={% static 'assets/img/favicon.png' %}/>
+    <tittle></tittle>
     <script data-search-pseudo-elements defer
             src="{% static 'js/all.min.js' %}"
             crossorigin="anonymous"></script>
     <script src="{% static 'libs/feather.min.js' %}"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static "libs/font-awesome/css/all.min.css" %}">
-
+    <link rel="stylesheet" href="{% static 'libs/font-awesome/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.png' %}"/>
 
 </head>
 <body class="nav-fixed">
@@ -114,7 +114,7 @@
                 <!-- Example Message 1  -->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-2.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-2.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                         </div>
@@ -124,7 +124,7 @@
                 <!-- Example Message 2-->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-3.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-3.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -139,7 +139,7 @@
                 <!-- Example Message 3-->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-4.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-4.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -154,7 +154,7 @@
                 <!-- Example Message 4-->
                 <a class="dropdown-item dropdown-notifications-item" href="#!">
                     <img class="dropdown-notifications-item-img"
-                         src={% static "assets/img/illustrations/profiles/profile-5.png" %}/>
+                         src="{% static 'assets/img/illustrations/profiles/profile-5.png' %}"/>
                     <div class="dropdown-notifications-item-content">
                         <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -190,7 +190,7 @@
                     <div class="dropdown-item-icon"><i data-feather="settings"></i></div>
                     Cuenta
                 </a>
-                <a class="dropdown-item" href="{% url 'ingreso:ingreso_usuario' %}">
+                <a class="dropdown-item" href="#">
                     <div class="dropdown-item-icon"><i data-feather="log-out"></i></div>
                     Cerrar Sesión
                 </a>
@@ -253,7 +253,7 @@
                     <div class="collapse" id="collapseUtilities" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
                             <a class="nav-link" href="#">Asignar estándares</a>
-                             <a class="nav-link" href="#">Modificar estándares</a>
+                            <a class="nav-link" href="#">Modificar estándares</a>
                         </nav>
                     </div>
 
@@ -290,7 +290,7 @@
                     <div class="collapse" id="variables" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
                             <a class="nav-link" href="#">Crear Variable</a>
-                                 <a class="nav-link" href="#">Editar Variables</a>
+                            <a class="nav-link" href="#">Editar Variables</a>
                         </nav>
                     </div>
 
@@ -313,6 +313,6 @@
 
 <!--Para el funcionamiento de este base.html eliminar estos 2 scripts de abajo en donde se llame a este html o simplemente no usarlos-->
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-<script src={% static "js/scripts.js" %}></script>
+<script src="{% static 'js/scripts.js' %}"></script>
 
 </html>
